--- a/datenschutz.html
+++ b/datenschutz.html
@@ -54,6 +54,7 @@
         * { box-sizing: border-box; }
 
         html { overflow-x: hidden; }
+        *, *::before, *::after { box-sizing: border-box; }
 
         body {
             margin: 0;
