--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -53,6 +53,7 @@
         * { box-sizing: border-box; }
 
         html { overflow-x: hidden; }
+        *, *::before, *::after { box-sizing: border-box; }
 
         body {
             margin: 0;
@@ -514,6 +515,18 @@
 
         .footer-social-mobile { display: none; flex-direction: column; margin-top: 16px; }
         .footer-social-mobile .footer-social-icons { display: flex; gap: 16px; margin-top: 4px; }
+
+        @media (max-width: 768px) {
+            .team-card { flex-direction: column; }
+            .team-avatar { width: 100%; height: auto; aspect-ratio: 1 / 1; }
+            .leistungen-grid { grid-template-columns: 1fr 1fr; }
+        }
+
+        @media (max-width: 480px) {
+            .leistungen-grid { grid-template-columns: 1fr; }
+            .team-grid { grid-template-columns: 1fr; }
+            .intro-photos { max-width: 100%; }
+        }
 
         @media (max-width: 520px) {
             header { padding: 18px; }
