--- a/kontakt.html
+++ b/kontakt.html
@@ -53,6 +53,7 @@
         * { box-sizing: border-box; }
 
         html { overflow-x: hidden; }
+        *, *::before, *::after { box-sizing: border-box; }
 
         body {
             margin: 0;
@@ -562,7 +563,15 @@
         .footer-social-mobile { display: none; flex-direction: column; margin-top: 16px; }
         .footer-social-mobile .footer-social-icons { display: flex; gap: 16px; margin-top: 4px; }
 
+        @media (max-width: 768px) {
+            .contact-card { flex-direction: column; }
+            .contact-avatar { width: 100%; height: auto; aspect-ratio: 1 / 1; }
+            .contact-grid { grid-template-columns: 1fr 1fr; }
+        }
+
         @media (max-width: 540px) {
+            .contact-grid { grid-template-columns: 1fr; }
+            .form-row { grid-template-columns: 1fr; }
             header { padding: 18px; }
             main { padding: 36px 18px 60px; }
             .form-row { grid-template-columns: 1fr; }
