button oben rechts

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
 
         @media (max-width: 768px) {
             .projects-counter { display: block; }
-            .hero-split .hero-ctas { justify-content: center; }
+            .hero-split .hero-ctas { justify-content: flex-end; }
             .hero-split {
                 grid-template-columns: 1fr;
                 gap: 24px;
