--- a/kontakt.html
+++ b/kontakt.html
@@ -661,6 +661,10 @@
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
                             info@murrmedien.de
                         </a>
+                        <a class="contact-link" href="https://www.linkedin.com/in/luca-krämer-5676b11ba/" target="_blank" rel="noopener">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8"><rect x="2" y="2" width="20" height="20" rx="4"/><path d="M7 10v7M11 10v7M11 13a3 3 0 0 1 6 0v4"/><circle cx="7" cy="7" r="1" fill="currentColor" stroke="none"/></svg>
+                            LinkedIn
+                        </a>
                     </div>
                 </div>
             </div>
@@ -678,6 +682,10 @@
                         <a class="contact-link" href="mailto:info@murrmedien.de">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
                             info@murrmedien.de
+                        </a>
+                        <a class="contact-link" href="https://www.linkedin.com/in/moritz-stoppel-b36081358/" target="_blank" rel="noopener">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8"><rect x="2" y="2" width="20" height="20" rx="4"/><path d="M7 10v7M11 10v7M11 13a3 3 0 0 1 6 0v4"/><circle cx="7" cy="7" r="1" fill="currentColor" stroke="none"/></svg>
+                            LinkedIn
                         </a>
                     </div>
                 </div>
